# eme_avr_sunrise_alarm_clock

./: .gitignore  CMakeLists.txt  README.md
sunrise_alarm_clock/: .gitignore  main.c  sunrise_alarm_clock.atsln  sunrise_alarm_clock.componentinfo.xml  sunrise_alarm_clock.cproj
sunrise_alarm_clock/APP/: app_config.h  app_interface.h  app_private.h  app_program.c  app_program.c~
sunrise_alarm_clock/COMMON/: bit_math.h  interrupts.h  mem_map.h  std.h
sunrise_alarm_clock/COMMON/timer/: Timers.c  Timers_Services.c  Timers_Services.h  timer_interface.h  timer_program.c
sunrise_alarm_clock/HAL/buzz/: buzz_interface.h  buzz_program.c
sunrise_alarm_clock/HAL/kpd/: kpd_config.h  kpd_interface.h  kpd_program.c
sunrise_alarm_clock/HAL/lcd/: lcd_config.h  lcd_interface.h  lcd_private.h  lcd_program.c
sunrise_alarm_clock/HAL/ldr/: ldr.c  ldr.h  ldr_interface.h  ldr_program.c
sunrise_alarm_clock/HAL/led/: Led.c  Led.h  Led_Cfg.h
sunrise_alarm_clock/HAL/pwm/: pwm.c  pwm.h  pwm_interface.h  pwm_linking_config.c  pwm_linking_config.h  pwm_program.c
sunrise_alarm_clock/MCAL/adc/: adc_config.h  adc_interface.h  adc_lconfig.c  adc_private.h  adc_program.c
sunrise_alarm_clock/MCAL/gpio/: gpio.c  gpio.h  gpio_interface.h  gpio_private.h  gpio_program.c
sunrise_alarm_clock/MCAL/timers/: Timers.c  Timers.h
sunrise_alarm_clock/SERVICE/: Timers_Services.c  Timers_Services.h
